--- a/final_fine_tuning.ipynb
+++ b/final_fine_tuning.ipynb
@@ -209,10 +209,7 @@
     ")\n",
     "\n",
     "from peft import LoraConfig\n",
-    "from trl import SFTTrainer\n",
-    "\n",
-    "import huggingface_hub\n",
-    "huggingface_hub.login('my_own_number')"
+    "from trl import SFTTrainer"
    ]
   },
   {
